--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "express-handlebars": "^8.0.1",
     "marked": "^14.1.3",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.4"
+  },
+  "devDependencies": {
+    "mysql2": "^3.11.3"
   }
 }
