--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^8.0.1",
     "marked": "^14.1.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.4"
   },
